<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/edit_item_title"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:text="@string/username" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:text="@string/username" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:selectAllOnFocus="true"
            android:text="@string/password" />

        <EditText
            android:id="@+id/txt_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_tag"
            android:inputType="textPersonName"
            android:text="@string/add_tag"
            android:selectAllOnFocus="true"
            style="@style/tag_insert"/>
        <ListView
            android:id="@+id/list_view_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/tags"
            android:inputType="textPersonName"
            style="@style/tag_element"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clipToPadding="true"
            android:dividerPadding="20dp"
            android:layoutDirection="ltr"
            android:layoutMode="opticalBounds"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/btn_ok"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_gravity="clip_horizontal|clip_vertical"
                android:background="@android:color/white"
                android:clickable="true"
                android:focusable="true"
                android:gravity="left"
                android:text="@string/ok"
                android:textAlignment="center"
                android:textColor="#0097A7"
                android:textStyle="bold" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="clip_horizontal|clip_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:focusable="true"
                android:gravity="right"
                android:text="Cancel"
                android:textAlignment="center"
                android:textColor="#0097A7"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>